[package]
name = "png-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
bincode = "2.0.0-rc.3"
flate2 = "1.0.27"
byteorder = "1.4.3"
thiserror = "1.0.47"
crc32fast = "1.3.2"
